# backend/app/api/v1/router.py
@@ -8,6 +8,7 @@ from app.api.v1 import (
     exports,
     forms,
     media,
+    monitoring,
     people,
     projects,
     roles,
@@ -19,6 +20,9 @@ from app.api.v1 import (
 api_router = APIRouter()
 api_router.include_router(auth.router, prefix="/auth", tags=["auth"])
 api_router.include_router(cases.router, prefix="/cases", tags=["cases"])
+api_router.include_router(
+    monitoring.router, prefix="/monitoring", tags=["monitoring"]
+)
 api_router.include_router(datasets.router, prefix="/datasets", tags=["datasets"])
 api_router.include_router(devices.router, prefix="/devices", tags=["devices"])
 api_router.include_router(exports.router, prefix="/exports", tags=["exports"])
